--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,10 @@ button {
 }
 
 @media (min-width: 768px) {
+  .main-container {
+    overflow-x: hidden;
+  }
+
   .container {
     flex-direction: row;
     gap: 2rem;
